[project]
name = "instagram-post"
version = "0.1.0"
description = ""
authors = [
    {name = "Poppo9"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
